--- a/package.json
+++ b/package.json
@@ -14,8 +14,19 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "izitoast": "^1.4.0",
+    "moment": "^2.24.0",
+    "moment-precise-range-plugin": "^1.3.0",
+    "vee-validate": "^2.1.6",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-cookie": "^1.1.4",
+    "vue-localstorage": "^0.6.2",
+    "vue-notifications": "^0.9.0",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -54,6 +65,7 @@
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -61,6 +73,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.1.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
