--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.2.1",
     "izitoast": "^1.4.0",
     "moment": "^2.24.0",
     "moment-precise-range-plugin": "^1.3.0",
@@ -73,6 +74,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "prompt": "^1.0.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
     "selenium-server": "^3.0.1",
